Changelog
=========

2.1a2 (unreleased)
------------------

- Added object_cut view.
  [tschanzt]

- Remove KSS dependency from AJAX table views.
  [cah190]

- In table.pt use sequence_length to get batch size.
  [cah190]


2.1a1 (2012-06-29)
------------------

- Adjust table.pt TAL to work after the TAL engine became a bit stricter
  about only allowing path expressions within string expressions.
  [davisagli]

- Remove hard dependency on ATContentTypes.
  [davisagli]

- Clarify which item is the default view for the folder in the folder
  contents view.
  [rossp]

- Use plone.batching for all batches (PLIP #12235)
  [tom_gross]


2.0.9 (2012-04-15)
------------------

- In table.pt allow properly sorting on modification date, by adding a
  class like sortabledata-2012-04-03-10-37-27.
  [maurits]


2.0.8 (2012-03-06)
------------------

- Namechooser: Attempt to return an id with timestamp before returning a 
  value error after 100 id check attempts.
  [eleddy]

- Namechooser: Pass the parent object to the Plone check_id script so
  it can detect duplicates.

- Namechooser: Use the Zope ObjectManager _checkId method to check
  new ids when possible, to avoid errors when adding invalid
  ids not caught by the old check. This fixes
  http://code.google.com/p/dexterity/issues/detail?id=244
  [davisagli]


2.0.7 (2011-07-04)
------------------

- Replace links to .../@@folder_contents by links to .../folder_contents
  so that 'Content' tab remains selected after a folder action.
  This fixes http://dev.plone.org/plone/ticket/10122.
  [thomasdesvenain]

- Add brain in dict returned by ``folderitems`` method of
  the ``FolderContentsTable`` for items not part of the currently
  visible batch as well.
  [mj]


2.0.6 (2011-05-02)
------------------

- Add brain in dict returned by ``folderitems`` method
  of ``FolderContentsTable`` class to ease customisation.
  [gotcha]

- Add MANIFEST.in.
  [WouterVH]

- Fixed state title in folder contents.
  [thomasdesvenain]

