@@ -218,4 +218,12 @@
         permission="cmf.ModifyPortalContent"
         />
 
+    <!-- change ownership form -->
+    <browser:page
+        for="*"
+        name="ownership_form"
+        class=".change_ownership.ChangeOwnershipForm"
+        permission="cmf.ModifyPortalContent"
+        />
+
 </configure>
